<resources>
    <string name="app_name">MaterialLessons</string>
    <string name="fruit">Fruit</string>
    <string name="text_name_hint">Enter your favorite fruit</string>
    <string name="button">Snackbar SHORT</string>
    <string name="buttonLong">Snackbar LONG</string>
    <string name="buttonIndef">"SnackBar INDEFINITE "</string>
    <string name="buttonAction">SnackBar ACTION</string>
    <string name="action_settings">Settings</string>
    <string name="buttonFlat">Flat Button</string>
    <string name="buttonFlatBounded">Button bouned</string>
    <string name="buttonRaised">Button raised</string>
    <string name="buttonRaisedBounded">Raised Bounded</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mao Zedong</string>
    <string name="nav_header_subtitle">Zhōngguó Gòngchǎndǎng</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="show">Show Progress</string>
    <string name="hide">Hide Progress</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="big_text">Евгений Онегин\n\nМой дядя самых честных правил,\nКогда не в шутку занемог,\nОн уважать себя заставил\nИ лучше выдумать не мог.\nЕго пример другим наука;\nНо, боже мой, какая скука\nС больным сидеть и день и ночь,\nНе отходя ни шагу прочь!\nКакое низкое коварство\nПолуживого забавлять,\nЕму подушки поправлять,\nПечально подносить лекарство,\nВздыхать и думать про себя:\nКогда же черт возьмет тебя!»\nII\nТак думал молодой повеса,\nЛетя в пыли на почтовых,\nВсевышней волею Зевеса\nНаследник всех своих родных.\nДрузья Людмилы и Руслана!\nС героем моего романа\nБез предисловий, сей же час\nПозвольте познакомить вас:\nОнегин, добрый мой приятель,\nРодился на брегах Невы,\nГде, может быть, родились вы\nИли блистали, мой читатель;\nТам некогда гулял и я:\nНо вреден север для меня 1.\nIII\nСлужив отлично благородно,\nДолгами жил его отец,\nДавал три бала ежегодно\nИ промотался наконец.\nСудьба Евгения хранила:\nСперва Madame за ним ходила,\nПотом Monsieur ее сменил.\nРебенок был резов, но мил.\nMonsieur l\'Abbé, француз убогой,\nЧтоб не измучилось дитя,\nУчил его всему шутя,\nНе докучал моралью строгой,\nСлегка за шалости бранил\nИ в Летний сад гулять водил.\n</string>
    <string name="title_activity_tab">Tab Activity</string>
    <string name="fragment_1">Jupiter</string>
    <string name="fragment_2">Earth</string>
    <string name="fragment_3">Saturn</string>
    <string name="title_home">Jupiter</string>
    <string name="title_dashboard">Earth</string>
    <string name="title_notifications">Saturn</string>
    <string name="title_activity_bottom">BottomActiviry</string>
    <string name="button1">RedStyle</string>
    <string name="button2">Orange Style</string>
    <string name="button3">Yellow style</string>
    <string name="button4">Green Style</string>
    <string name="button5">Blue Style</string>
    <string name="title_activity_Style">Style Activity</string>

</resources>