<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson2.SecondActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:onClick="snackbarShort"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:onClick="snackbarLong"
        android:text="@string/buttonLong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:onClick="snackbarIndefinite"
        android:text="@string/buttonIndef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:onClick="snackbarAction"
        android:text="@string/buttonAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />



</androidx.constraintlayout.widget.ConstraintLayout>